k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: baltimore-smart-city
  labels:
    name: baltimore-smart-city
