k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: baltimore-smart-city
  namespace: baltimore-smart-city
  labels:
    app: baltimore-smart-city
spec:
  selector:
    app: baltimore-smart-city
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  type: LoadBalancer
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
